# FoodRecipeHub

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  main.py  requirements.txt  setup.cfg
locale/: README.md
locale/en/LC_MESSAGES/: base.po~  messages.po
locale/fa/LC_MESSAGES/: messages.po
setup/: version_punch.py
src/apis/recipes/: __init__.py  functions.py
src/apis/relations/: __init__.py  functions.py
src/apis/users/: __init__.py  functions.py
src/core/: babel.py  database.py  databse.py  exceptions.py  ratelimiter.py  settings.py  startup.py
src/helpers/cache/: __init__.py  decorators.py
src/helpers/jwt/: __init__.py  models.py  oauth2.py  schemas.py
src/helpers/logger/: __init__.py  models.py
src/helpers/messages/: __init__.py  message_source.py
src/helpers/response/: __init__.py  schemas.py
src/helpers/s3images/: __init__.py
src/resources/images/: models.py  schemas.py
src/resources/recipes/: __init__.py  enums.py  fixtures.py  models.py  schemas.py
src/resources/relations/: __init__.py  models.py
src/resources/users/: __init__.py  enums.py  models.py  schemas.py
tests/load/: README.md  locustfile.py
