[bumpversion]
current_version = 1.0.0
build_number = 23951e46
tag = False

[metadata]
name = FoodRecipeHub
author = Alireza Khabbazan
description = A platform for sharing delicious food recipes.
url = https://github.com/khabbazan
keywords = FastAPI, SqlAlchemy

[options]
python_requires = >=3.10, <4
install_requires =
	fastapi
	sqlalchemy

[bumpversion:file:version.txt]

[bumpversion:file:src/settings.py]

[flake8]
ignore = E266, B008, A002, A003, N805
exclude = .git,__pycache__
max-line-length = 170
